# papt-reference-implementation

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  be.inp  c_all.inp  he.inp  li.inp
src/: CMakeLists.txt  ManyBody.cpp  ManyBody.h  PAPT.cpp  PAPT.h  dress.cpp  dress.h  main.cpp  utility.cpp  utility.h
